Closed Bug 1547560 Opened 6 years ago Closed 6 years ago

[css-grid-2] Unable to override column-gap value from parent when in a subgrid.

Categories

(Core :: Layout: Grid, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla69
Tracking Status
firefox69 --- fixed

People

(Reporter: me, Assigned: MatsPalmgren_bugz)

References

Details

Attachments

(1 file)

I am using the latest treeherder build on OSX.

https://treeherder.mozilla.org/#/jobs?repo=try&revision=23100795152d2faa97305e678b57316a9058773a

I have this example: https://codepen.io/rachelandrew/pen/ROdovg

  1. The parent grid has gap: 20px.
  2. The grid item "d" has subgridded rows and columns with row-gap and column-gap set to 0.
  3. The row-gap is correctly set to 0.
  4. The column-gap remains at 20px.

As detailed in the examples in the specification, it should be possible to change the size of the gaps:

"Meanwhile, half the size of the difference between the subgrid’s gutters (row-gap/column-gap) and its parent grid’s gutters is applied as an extra layer of (potentially negative) margin to the items not at those edges. This extra layer of “margin” also accumulates through multiple levels of subgrids."

https://drafts.csswg.org/css-grid-2/#subgrid-item-contribution

Depends on: subgrid
Priority: -- → P3
Assignee: nobody → mats
Status: NEW → ASSIGNED
Pushed by mpalmgren@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/81136d6972e8 [css-grid-2] Add subgrid gaps to its items contributions in track sizing and recompute the subgrid tracks size/position to center the subgrid gaps. r=dholbert
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69
Blocks: 1547564
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: